--- a/Northwind/Northwind/ProductCell.xib
+++ b/Northwind/Northwind/ProductCell.xib
@@ -5,20 +5,47 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductCell" id="KGk-i7-Jjw" customClass="ProductCell" customModule="Northwind" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductCell" rowHeight="77" id="KGk-i7-Jjw" customClass="ProductCell" customModule="Northwind" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="77"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="76.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="productName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unL-H9-Pof">
+                        <rect key="frame" x="16" y="11" width="106" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wv-P1-JUS">
+                        <rect key="frame" x="16" y="40" width="39" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="unL-H9-Pof" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="2WQ-ZV-whp"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="4wv-P1-JUS" secondAttribute="bottom" constant="5" id="ItW-g3-GEu"/>
+                    <constraint firstItem="4wv-P1-JUS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="P27-ew-6Mr"/>
+                    <constraint firstItem="unL-H9-Pof" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Ygr-nS-edh"/>
+                    <constraint firstItem="4wv-P1-JUS" firstAttribute="top" secondItem="unL-H9-Pof" secondAttribute="bottom" constant="8" id="ibh-WH-02o"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="priceLabel" destination="4wv-P1-JUS" id="irO-YV-HZB"/>
+                <outlet property="productNameLabel" destination="unL-H9-Pof" id="n54-14-Mzs"/>
+            </connections>
+            <point key="canvasLocation" x="34" y="70.5"/>
         </tableViewCell>
     </objects>
 </document>
