--- a/Northwind/Northwind/Base.lproj/Main.storyboard
+++ b/Northwind/Northwind/Base.lproj/Main.storyboard
@@ -66,6 +66,45 @@
             </objects>
             <point key="canvasLocation" x="1310" y="133"/>
         </scene>
+        <!--Product DetailsVC-->
+        <scene sceneID="3Yi-HO-u3k">
+            <objects>
+                <viewController storyboardIdentifier="ProductDetailsVC" id="fPe-J5-o2z" customClass="ProductDetailsVC" customModule="Northwind" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5Sx-S7-Myz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="ProductPrice" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ifF-L9-4wQ">
+                                <rect key="frame" x="137" y="337" width="100" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="ProductName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yAh-Iw-QYi">
+                                <rect key="frame" x="110" y="271" width="155" height="50"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ifF-L9-4wQ" firstAttribute="top" secondItem="yAh-Iw-QYi" secondAttribute="bottom" constant="16" id="4fh-LP-YPz"/>
+                            <constraint firstItem="yAh-Iw-QYi" firstAttribute="centerX" secondItem="6ZF-sA-Htu" secondAttribute="centerX" id="9w9-wb-D2Y"/>
+                            <constraint firstItem="ifF-L9-4wQ" firstAttribute="centerX" secondItem="yAh-Iw-QYi" secondAttribute="centerX" id="DSI-d1-8gc"/>
+                            <constraint firstItem="yAh-Iw-QYi" firstAttribute="centerY" secondItem="6ZF-sA-Htu" secondAttribute="centerY" id="slt-Wq-dgb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6ZF-sA-Htu"/>
+                    </view>
+                    <connections>
+                        <outlet property="productNameLabel" destination="yAh-Iw-QYi" id="wQc-1P-6TR"/>
+                        <outlet property="productPriceLabel" destination="ifF-L9-4wQ" id="Ydz-ZK-Pyd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xO0-3q-QLF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2192.8000000000002" y="132.68365817091455"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="j3u-qc-bQ6">
             <objects>
