Edit Product object when text field value is changed.

--- a/Northwind/Northwind/Base.lproj/Main.storyboard
+++ b/Northwind/Northwind/Base.lproj/Main.storyboard
@@ -89,6 +89,9 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="nameDidChange:" destination="fPe-J5-o2z" eventType="editingChanged" id="pTm-KT-1y4"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZgD-q3-er2">
                                 <rect key="frame" x="32" y="149" width="45" height="21"/>
@@ -107,6 +110,9 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="priceDidChange:" destination="fPe-J5-o2z" eventType="editingChanged" id="Wl8-iJ-QIB"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iyn-X4-Hzx">
                                 <rect key="frame" x="32" y="202" width="39" height="21"/>
